methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
                                        while (p!=8) {if (estSurBiscuit()) {return true}; avance(); p=p+1;}
                                        ^MethodsReturning:4: error: return outside method definition
if (haveBaggle()) {return} else {droite();avance();gauche();}
                   ^