methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var p:Int = 1
                                        while (p!=8) {if (estSurBiscuit()) {return true}; avance(); p=p+1;}
                                       }
if (haveBaggle()) {return} else {droite();avance();gauche();}
                            
                            
